--- a/css/Bailes.css
+++ b/css/Bailes.css
@@ -1,4 +1,7 @@
-
+*{
+    padding:0;
+    margin:0;
+}
 body {
     background-color:  rgba(32, 192, 192, 0.877);
     font-family: 'Franklin Gothic Medium';
@@ -54,3 +57,72 @@ header nav ul li {
     flex-grow: 1;
 }
 
+/*FOOTER*/
+.footer{
+    background: black;
+    width: 100%;
+    height: 200px;
+    text-align: center;
+    
+  }
+  
+  .footer h3{
+    color: #ffffff;
+    padding-top: 30px
+  }
+  
+  .footer p{
+    color: #ffffff;
+    font-size: 13px;
+  }
+  
+  .footer a{
+    text-decoration: none;
+  }
+  
+  .icon-footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .fa-brands{
+    font-size: 35px; 
+    margin: 10px;
+    background: #fff;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+  }
+  
+  .fa-instagram{
+    background: linear-gradient(to top right, #fcde30, #e9712a, #d2313b, #ae4198, #7540a1, #5443a8);
+    color: #ffffff;
+  }
+  
+  .fa-instagram:hover{
+    color: black;
+  }
+  
+  .fa-facebook{
+    color: #1E4595;
+  }
+  
+  .fa-facebook:hover{
+    background: #1E4595;
+    color: #ffffff;
+  }
+  
+  .fa-twitter:hover{
+    background: linear-gradient(to right top, #42a9ec, #358de6);
+    color: #ffffff;
+  }
+  
+  .fa-twitter{
+    color: #358de6;
+    background-color: #ffffff;
+  }
+  
