--- a/css/Bailes.css
+++ b/css/Bailes.css
@@ -1,4 +1,3 @@
-
 body {
     background-color:  rgba(32, 192, 192, 0.877);
     font-family: 'Franklin Gothic Medium';
@@ -45,14 +44,46 @@ header h1{
     margin-left: 10px;
 }
 
+header nav{
+  width: 100%;
+  margin: 37px 25px 0;
+  display: flex;
+  justify-content: end;
+
+}
+
 header nav ul {
-    list-style: none;
-    display: flex;
+  list-style: none;
+  display: flex;
 }
 
 header nav ul li {
-    flex-grow: 1;
+  flex-grow: 1;
 }
+
+.bailes{
+  background-color: rgb(255, 184, 0);
+  height: 40px;
+  border-radius: 125px;
+}
+
+header nav ul li a {
+  color:black;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  font-style: italic;
+  padding: 10px;
+}
+
+header nav ul li a:hover{
+  color: rgba(0, 0, 0, 0.4);
+}
+main{
+  margin: 0 10%;
+}
+
+
 
 /*FOOTER*/
 .footer{
@@ -122,4 +153,3 @@ header nav ul li {
     color: #358de6;
     background-color: #ffffff;
   }
-  
