--- a/css/aranceles.css
+++ b/css/aranceles.css
@@ -1,108 +1,166 @@
 /* font-family: 'Open Sans', sans-serif;
 */
-
+main{
+  text-align: center;
+  font-weight: bolder;
+}
 body {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    line-height: 20px;
+  background-color: rgba(32, 192, 192, 0.877);
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  line-height: 20px;
 }
 
-header {
-    background-color: rgba(32, 192, 192, 0.877);
-    padding: 16px 0;
+/*HEADER*/
+header{
+  display: flex;
+  height: 96px;
+  border-bottom:  1px solid rgba(128, 128, 128, 0.63); 
 }
 
 header h1{
-    color:black;
-    font-size: 40px;
-    font-weight: 100;
-    font-style: normal;
-    display: inline-block;
-    position: absolute;
-    bottom: auto;
-    margin-left: 10px;
+  color:black;
+  font-size: 30px;
+  display: inline-block;
+  position: absolute;
+  margin: 72px 0;
+}
+
+/*NAV*/
+header nav{
+  width: 100%;
+  margin: 37px 25px 0;
+  display: flex;
+  justify-content: end;
+
 }
 
 header nav ul {
-    list-style: none;
-    display: flex;
+  list-style: none;
+  display: flex;
 }
 
 header nav ul li {
-    flex-grow: 1;
+  flex-grow: 1;
+}
+
+.bailes{
+  background-color: rgb(255, 184, 0);
+  height: 40px;
+  border-radius: 125px;
 }
 
 header nav ul li a {
-    color:black;
-    text-decoration: none;
-    display: block;
-    text-align: center;
+  color:black;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  font-style: italic;
+  padding: 10px;
 }
+
+header nav ul li a:hover{
+  color: rgba(0, 0, 0, 0.4);
+}
+main{
+  margin: 0 10%;
+}
+
+/*SECCION 1*/
+.clase1{
+  width: 100%;
+}
+
+.section-1 h2{
+  text-align: center; 
+  /*font-family: ;*/
+  font-size: 60px;
+  
+}
+
+.parrafo1{
+  margin: 100px 0;
+}
+
+.parra1{
+  text-indent: 30px;
+  justify-content: center;
+  line-height: 1.5;
+  /*font-family: ;*/
+  font-size: 50px;
+  
+}
+
+.clase1 img{
+  width: 100%;
+  border-radius: 25px;
+}
+
 /*FOOTER*/
 .footer{
-    background: black;
-    width: 100%;
-    height: 200px;
-    text-align: center;
-    
-  }
+  background: black;
+  width: 100%;
+  height: 200px;
+  text-align: center;
   
-  .footer h3{
-    color: #ffffff;
-    padding-top: 30px
-  }
-  
-  .footer p{
-    color: #ffffff;
-    font-size: 13px;
-  }
-  
-  .footer a{
-    text-decoration: none;
-  }
-  
-  .icon-footer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .fa-brands{
-    font-size: 35px; 
-    margin: 10px;
-    background: #fff;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 100%;
-  }
-  
-  .fa-instagram{
-    background: linear-gradient(to top right, #fcde30, #e9712a, #d2313b, #ae4198, #7540a1, #5443a8);
-    color: #ffffff;
-  }
-  
-  .fa-instagram:hover{
-    color: black;
-  }
-  
-  .fa-facebook{
-    color: #1E4595;
-  }
-  
-  .fa-facebook:hover{
-    background: #1E4595;
-    color: #ffffff;
-  }
-  
-  .fa-twitter:hover{
-    background: linear-gradient(to right top, #42a9ec, #358de6);
-    color: #ffffff;
-  }
-  
-  .fa-twitter{
-    color: #358de6;
-    background-color: #ffffff;
-  }
+}
+
+.footer h3{
+  color: #ffffff;
+  padding-top: 30px
+}
+
+.footer p{
+  color: #ffffff;
+  font-size: 13px;
+}
+
+.footer a{
+  text-decoration: none;
+}
+
+.icon-footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.fa-brands{
+  font-size: 35px; 
+  margin: 10px;
+  background: #fff;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+}
+
+.fa-instagram{
+  background: linear-gradient(to top right, #fcde30, #e9712a, #d2313b, #ae4198, #7540a1, #5443a8);
+  color: #ffffff;
+}
+
+.fa-instagram:hover{
+  color: black;
+}
+
+.fa-facebook{
+  color: #1E4595;
+}
+
+.fa-facebook:hover{
+  background: #1E4595;
+  color: #ffffff;
+}
+
+.fa-twitter:hover{
+  background: linear-gradient(to right top, #42a9ec, #358de6);
+  color: #ffffff;
+}
+
+.fa-twitter{
+  color: #358de6;
+  background-color: #ffffff;
+}
