--- a/css/nosotrxs.css
+++ b/css/nosotrxs.css
@@ -1,9 +1,6 @@
-/* font-family: 'Open Sans', sans-serif;
-*/
-
 body {
   background-color: rgba(32, 192, 192, 0.877);
-  font-family: 'Open Sans', sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   line-height: 20px;
 }
@@ -21,21 +18,12 @@ header img{
   margin: 10px 0;
 }
 
-header h1{
-  color:black;
-  font-size: 30px;
-  display: inline-block;
-  position: absolute;
-  margin: 72px 0;
-}
-
 /*NAV*/
 header nav{
   width: 100%;
   margin: 37px 25px 0;
   display: flex;
   justify-content: end;
-
 }
 
 header nav ul {
@@ -45,6 +33,7 @@ header nav ul {
 
 header nav ul li {
   flex-grow: 1;
+  font-weight: bold;
 }
 
 .bailes{
@@ -189,6 +178,11 @@ main{
   outline: none;
   border-radius: 5px;
   margin: 10px auto;
+}
+
+.submit:hover{
+  background-color: rgba(53, 117, 255, 0.9);
+  box-shadow: 2px 2px  rgba(53, 117, 255, 0.6) ;
 }
 
 /*FOOTER*/
