--- a/css/aranceles.css
+++ b/css/aranceles.css
@@ -18,6 +18,18 @@ header{
   border-bottom:  1px solid rgba(128, 128, 128, 0.63); 
 }
 
+header .logo {
+  width: 20%;
+  position: absolute;
+  top: 0px;
+}
+
+header .logo img {
+  max-width: 100%;
+}
+
+
+
 header h1{
   color:black;
   font-size: 30px;
@@ -92,7 +104,7 @@ main{
 }
 
 .clase1 img{
-  width: 100%;
+  width: 35%;
   border-radius: 25px;
 }
 
