--- a/css/index.css
+++ b/css/index.css
@@ -2,8 +2,10 @@
   padding: 0;
   margin: 0;
 }
-a {
-  font-weight: bold;
+html{
+  
+
+  box-sizing: border-box;
 }
 a:hover{
   text-decoration: underline;
@@ -12,12 +14,12 @@ body {
   background-color: rgb(0, 214, 214);
 }
 header {
-  padding: 40px 0 0 0;
+  padding: 4% 0 0 0;
 }
 .logo {
-  width: 250px;
+  width: 14%;
   position: absolute;
-  top: 0px;
+  top: 0.5vw;
 }
 nav ul {
   display: flex;
@@ -28,42 +30,37 @@ nav ul {
   justify-content: end;
   align-items: center;
 }
-
 nav li {
-  margin-right: 20px;
+  margin-right: 2vw;
 }
-
 .botonBailes {
   background-color: #ffb800;
-  border-radius: 20px;
-  padding: 5px;
-  width: 100px;
+  border-radius: 1vw;
+  padding: 0.3vw;
+  width: 8vw;
   justify-content: center;
   color: black;
   text-decoration: none;
 }
-
 nav a {
   display: flex;
   text-decoration: none;
   color: black;
-  font-size: 20px;
+  font-size: 1.2vw;
 }
-
 .container {
   display: flex;
   position: relative;
-  top: 80px;
-  left: 300px;
+  justify-content: center;
 }
 
 .fondoImagen {
   position: relative;
-  padding: 16em;
-  width: 10px;
-  height: 10px;
+  padding: 14vw;
+  top:6vw;
+  left:-5vw;
   background-color: rgba(148, 243, 255, 0.6);
-  border-radius: 80px;
+  border-radius: 12%;
   transform: rotate(20deg);
   z-index: -1;
   animation: light 4s linear infinite;
@@ -76,31 +73,28 @@ nav a {
   justify-content: center;
   position: relative;
   top: -10%;
-  left:25%;
+  left:10%;
 }
-.containerLetras h2 {
-  text-indent: -30px;
+.containerLetras h1 {
+  text-indent: -3vw;
   text-shadow: 3px 3px 4px rgba(255, 255, 255, 1);
-  font-size: 100px;
+  font-size: 4vw;
 }
 .containerLetras p {
-  text-indent: 30px;
-  font-size: 50px;
+  text-indent: 3vw;
+  font-size: 3vw;
   color:white;
 }
 .containerLetras a {
   text-align: center;
-  margin-left: -25px;
-  margin-top: 10px;
-  font-size: 25px;
+  margin-left: -2.5vw;
+  margin-top: 1vw;
+  font-size: 1.5vw;
 
-}
-.container .botonBailes{
-  padding:5px 10px;
 }
 .imagenBailarines {
   position: absolute;
-  width: 600px;
+  width: 33vw;
   top: 18%;
   left: -6%;
   transform: rotate(-28deg);
@@ -110,49 +104,93 @@ nav a {
 }
 
 .fondoImagenDos {
+  margin-top: 10vw;
   transform: rotate(70deg);
-  padding: 10em;
+  padding: 5vw;
   background-color: rgba(148, 243, 255, 0.6);
-  border-radius: 150px;
+  border-radius: 12%;
   z-index: -1;
-  width: 400px;
-  height: 800px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3,250px); 
-  grid-auto-flow: dense; 
-  grid-gap: 30px; 
+  grid-template-rows: repeat(3,25%); 
+  grid-gap: 5vw; 
   position: relative;
-  left:200px;
+  top:4vw;
   animation: light 4s linear infinite;
 }
 
 .imagen {
-  box-shadow: 5px 5px 4px #454545;
-  border-radius: 15px;
+  box-shadow: 0.3vw 0.3vw 0.4vw #454545;
+  border-radius: 4%;
   transform: rotate(-70deg);
-  width:200px;
-  height:200px;
+  width:11vw;
+  height:11vw;
+}
+/* CONTAINERCLASES */
+
+.tituloClases{
+  text-transform: uppercase;
+  display:flex;
+  justify-content: center;
+  margin:10vw 0 4vw 0;
+}
+.tituloh1{
+  text-shadow: 0.2vw 0.2vw 0.4vw rgba(0, 0, 0,0.4);
+  font-size: 2.5vw;
+  background-color: white;
+  border-radius: 0.5vw;
+  padding:0.5vw;
+  box-shadow: 0.4vw 0.4vw 0.4vw rgba(0, 0, 0,0.6);
 }
 
+.containerClases{
+  display:grid;
+  grid-template-columns: repeat(3, 1fr);
+  border:2px solid white;
+  margin:0 0.5vw 4vw 0.5vw;
+  border-radius: 1vw;
+  background-color: black;
+}
 
+.item{
+  padding:1vw;
+  background-color: rgba(148, 243, 255, 1);
+  border-radius: 1vw;
+  margin:1.2vw;
+  box-shadow: 0.5vw 0.5vw 0.6vw rgba(0, 0, 0,0.6);;
+}
+.item h1{
+  text-decoration: underline;
+  margin-bottom:0.7vw;
+  font-size: 2vw;
+  text-align: center;
+} 
+.item p{
+  margin-top:1vw;
+  font-size:1.5vw;
+  text-align: justify;
+}
+.item p::before {
+  content: '" ';
+}
+.item p::after {
+  content: ' "';
+}
 /*FOOTER*/
 .footer{
   background: black;
-  width: 100%;
-  height: 200px;
-  text-align: center;
-  
+  text-align: center; 
+  padding:2% 0;
 }
 
 .footer h3{
   color: #ffffff;
-  padding-top: 30px
+  font-size: 1.5vw;
 }
 
 .footer p{
   color: #ffffff;
-  font-size: 13px;
+  font-size: 1vw;
 }
 
 .footer a{
@@ -166,11 +204,11 @@ nav a {
 }
 
 .fa-brands{
-  font-size: 35px; 
-  margin: 10px;
+  font-size: 2vw; 
+  margin: 1vw;
   background: #fff;
-  width: 50px;
-  height: 50px;
+  width: 3vw;
+  height: 3vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -209,16 +247,41 @@ nav a {
 
 @keyframes light {
   0% {
-    box-shadow: -10px -5px 10px #fff, 0 0 0 #fff, 0 0 0 #fff, 0 0 0 #fff;
+    box-shadow: -1vw -1vw 1vw #fff, 0 0 0 #fff, 0 0 0 #fff, 0 0 0 #fff;
   }
   25% {
-    box-shadow: 0 0 0  #fff, 10px 5px 10px #fff, 0 0 0 #fff, 0 0 0 #fff;
+    box-shadow: 0 0 0  #fff, 1vw 1vw 1vw #fff, 0 0 0 #fff, 0 0 0 #fff;
   }
   50% {
-    box-shadow: 0 0 0 #fff, 0 0 0  #fff, 10px 5px 10px #fff, 0 0 0 #fff;
+    box-shadow: 0 0 0 #fff, 0 0 0  #fff, 1vw 1vw 1vw #fff, 0 0 0 #fff;
   }
   100% {
-    box-shadow: 0 0 0 #fff, 0 0 0 #fff,  0 0 0 #fff, -10px -5px 10px #fff;
+    box-shadow: 0 0 0 #fff, 0 0 0 #fff,  0 0 0 #fff, -1vw -1vw 1vw #fff;
   }
   
 }
+
+/* MEDIA QUERY */
+
+@media only screen and (max-width:1200px){
+  .logo{
+    width:16%;
+  }
+  nav a{
+    font-size:1.5vw;
+  }
+} 
+
+@media only screen and (max-width:800px){
+  .logo{
+    width:18%;
+  }
+  nav a{
+    font-size:1.8vw;
+  }
+} 
+
+
+
+
+
