--- a/css/Bailes.css
+++ b/css/Bailes.css
@@ -3,36 +3,35 @@ body {
     font-family: 'Franklin Gothic Medium';
     font-size: 18px;
     line-height: 20px;
-   
+    text-align: center;
 }
 
 body h1 {
     font-family: 'Franklin Gothic Medium';
     font-size: 35px;
+    text-decoration: underline;
 }
 
 body h2 {
     font-family: "Cambria";
     font-size: 25px;
     line-height: 20px;
+    text-decoration: underline;
     }
 
 body h3 {
     font-family:'Cambria';
     font-size: 25px;
     line-height: 20px;
+    text-decoration: underline;
 }
 
 body h4 {
     font-family: 'Cambria';
     font-size: 25px;
     line-height: 20px;
+    text-decoration: underline;
 }
-
-body {
-  text-align: center;
-}
-
 
 header {
     background-color: rgba(32, 192, 192, 0.877);
