--- a/css/Bailes.css
+++ b/css/Bailes.css
@@ -1,172 +1,261 @@
-body {
-    background-color:  rgba(32, 192, 192, 0.877);
-    font-family: 'Franklin Gothic Medium';
-    font-size: 18px;
-    line-height: 20px;
-   
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  text-decoration: none;
 }
+
+/*Prueba 1*/
+body {
+  background-color:  rgba(0, 214,214);
+}
+
+/*Prueba Transicion 1*/
+
+a:hover{
+  text-decoration: underline;
+}
+
 /*prueba Logo*/
 .Logo {
-  width: 16%;
+  width: 15%;
   position: absolute;
   top: 0.5vw;
 }
 
-main h1 {
-    font-family: 'Franklin Gothic Medium';
-    font-size: 35px;
-    text-decoration: underline;
-    text-align: center;
+/*Prueba2*/
+
+body h1 {
+ font-family: 'Franklin Gothic Medium';
+ font-size: 33px;
+ text-decoration: underline;
+ text-align: center;
 }
 
-main h2 {
-    font-family: "Cambria";
-    font-size: 25px;
-    line-height: 20px;
-    text-decoration: underline;
-    text-align: center;
-    }
+/*Prueba Container*/
 
-main h3 {
-    font-family:'Cambria';
-    font-size: 25px;
-    line-height: 20px;
-    text-decoration: underline;
-    text-align: center;
+.container {
+  display: inline-block;
+  position: relative;
+  justify-content: center;
 }
 
-main h4 {
-    font-family: 'Cambria';
-    font-size: 25px;
+.container h2, h3, h4 {
+  margin: 2%;
+  padding: 1%;
+    font-family:'Franklin Gothic Medium';
+    font-size: 22px;
     line-height: 20px;
+    margin-top: 10px;
     text-decoration: underline;
     text-align: center;
+
 }
+
 
 .texto {
-text-align: center;
-}
+  margin: 1%;
+  padding: 1%;
+  text-align: justify;
+  font-family: 'Franklin Gothic Medium';
+  font-size: 22px;
+  }
+  .container img {
+    position: relative;
+    padding: 10px;
+    top: 2px;
+    left: 30vw;
+    width: 35vw;
+    border-radius: 5vw;
+  }
 
 
-
+/*Prueba3*/
 header {
   display: flex;
   height: 96px;
-  border-bottom:  1px solid rgba(128, 128, 128, 0.63);
+  border-bottom: 2px solid rgba(126, 126, 126, 0.63);
+  text-decoration: none;
 }
 
-header h1{
-    color:black;
-    font-size: 40px;
-    font-weight: 100;
-    font-style: normal;
-    display: inline-block;
-    position: absolute;
-    bottom: auto;
-    margin-left: 10px;
+header h1 {
+  color:black;
+  font-size: 40px;
+  font-weight: 100;
+  font-style: normal;
+  display: inline-block;
+  position: absolute;
+  bottom: auto;
+  margin-left: 10px;
 }
 
-header nav{
+/*Prueba4*/
+
+header nav {
   width: 100%;
-  margin: 37px 25px 0;
+  margin: 50px 0;
   display: flex;
   justify-content: end;
-
 }
-
 header nav ul {
-  list-style: none;
   display: flex;
+  list-style: none;
+  flex-wrap: wrap;
 }
-
-header nav ul li {
-  flex-grow: 1;
-}
-
-.bailes{
-  background-color: rgb(255, 184, 0);
-  height: 40px;
-  border-radius: 125px;
-}
-
 header nav ul li a {
   color:black;
   text-decoration: none;
   display: block;
   text-align: center;
-  font-style: italic;
+  font-style: normal;
+  font-size: 20px;
   padding: 10px;
 }
-
 header nav ul li a:hover{
   color: rgba(0, 0, 0, 0.4);
 }
 
+/*Prueba5*/
 .footer{
-    background: black;
-    width: 100%;
-    height: 200px;
-    text-align: center;
-    
-  }
+  background: black;
+  text-align: center;
+  padding: 2% 0;
+}
+.footer h3{
+  color: #ffffff;
+  padding-top: 30px
+}
+.footer p{
+  color: #ffffff;
+  font-size: 13px;
+}
+.footer a{
+  text-decoration: none;
+}
+.icon-footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.fa-brands{
+  font-size: 35px; 
+  margin: 10px;
+  background: #fff;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+}
+
+/*Pruba Transition 2*/
+
+.fa-instagram{
+  background: linear-gradient(to top right, #fcde30, #e9712a, #d2313b, #ae4198, #7540a1, #5443a8);
+  color: #ffffff;
+}
+.fa-instagram:hover{
+  color: black;
+}
+.fa-facebook{
+  color: #1E4595;
+}
+.fa-facebook:hover{
+  background: #1E4595;
+  color: #ffffff;
+}
+.fa-twitter{
+  color: #358de6;
+  background-color: #ffffff;
+}
+.fa-twitter:hover{
+  background: linear-gradient(to right top, #42a9ec, #358de6);
+  color: #ffffff;
+}
+
+
+/*Media Queries*/
+@media (max-width:1024px){
+
+  .logo{
+    width: 10%;
+} 
+.container {
+   display: inline-block;
+   position: relative;
+   justify-content: center;
+ }
   
-  .footer h3{
-    color: #ffffff;
-    padding-top: 30px
-  }
-  
-  .footer p{
-    color: #ffffff;
-    font-size: 13px;
-  }
-  
-  .footer a{
-    text-decoration: none;
-  }
-  
-  .icon-footer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .fa-brands{
-    font-size: 35px; 
-    margin: 10px;
-    background: #fff;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 100%;
-  }
-  
-  .fa-instagram{
-    background: linear-gradient(to top right, #fcde30, #e9712a, #d2313b, #ae4198, #7540a1, #5443a8);
-    color: #ffffff;
-  }
-  
-  .fa-instagram:hover{
-    color: black;
-  }
-  
-  .fa-facebook{
-    color: #1E4595;
-  }
-  
-  .fa-facebook:hover{
-    background: #1E4595;
-    color: #ffffff;
+.texto {
+ text-align: justify;
+ font-family: 'Franklin Gothic Medium';
+ font-size: 22px;
   }
 
-    .fa-twitter{
-    color: #358de6;
-    background-color: #ffffff;
-  }
+.container img {
+ position: relative;
+ padding: 10px;
+ top: 2px;
+ left: 30vw;
+ width: 35vw;
+ border-radius: 5vw;
+}
 
-  .fa-twitter:hover{
-    background: linear-gradient(to right top, #42a9ec, #358de6);
-    color: #ffffff;
-  }
+ header h1 {
+   color:black;
+   font-size: 40px;
+   font-weight: 100;
+   font-style: normal;
+   display: inline-block;
+   position: absolute;
+   bottom: auto;
+   margin-left: 10px;
+ }
  
+ header nav {
+   width: 100%;
+   margin: 50px 0;
+   display: flex;
+   justify-content: end;
+ }
+ header nav ul {
+   display: flex;
+   list-style: none;
+   flex-wrap: wrap;
+ }
+ header nav ul li a {
+   color:black;
+   text-decoration: none;
+   display: block;
+   text-align: center;
+   font-style: normal;
+   font-size: 20px;
+   padding: 10px;
+ }
+ header nav ul li a:hover{
+   color: rgba(0, 0, 0, 0.4);
+ }
+ 
+ .footer{
+   background: black;
+   text-align: center;
+   padding: 2% 0;
+ }
+ .footer h3{
+   color: #ffffff;
+   padding-top: 30px
+ }
+ .footer p{
+   color: #ffffff;
+   font-size: 13px;
+ }
+
+ .fa-brands{
+  font-size: 4vw; 
+  margin: 2vw;
+  width: 6vw;
+  height: 6vw;
+ }
+
+}
