--- a/css/aranceles.css
+++ b/css/aranceles.css
@@ -1,112 +1,135 @@
-/* font-family: 'Open Sans', sans-serif;
-*/
-main{
-  text-align: center;
-  font-weight: bolder;
+* {
+  padding: 0;
+  margin: 0;
+}
+html{
+  box-sizing: border-box;
+}
+a:hover{
+  text-decoration: underline;
 }
 body {
-  background-color: rgba(32, 192, 192, 0.877);
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
-  line-height: 20px;
+  background-color: rgb(0, 214, 214);
 }
-
-/*HEADER*/
-header{
-  display: flex;
-  height: 96px;
-  border-bottom:  1px solid rgba(128, 128, 128, 0.63); 
+header {
+  padding: 4% 0 0 0;
 }
-
-header .logo {
-  width: 20%;
+.logo {
+  width: 14%;
   position: absolute;
-  top: 0px;
+  top: 0.5vw;
 }
-
-header .logo img {
-  max-width: 100%;
-}
-
-
-
-header h1{
-  color:black;
-  font-size: 30px;
-  display: inline-block;
-  position: absolute;
-  margin: 72px 0;
-}
-
-/*NAV*/
-header nav{
-  width: 100%;
-  margin: 37px 25px 0;
+nav ul {
   display: flex;
-  justify-content: end;
-
-}
-
-header nav ul {
   list-style: none;
-  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  justify-content: end;
+  align-items: center;
 }
-
-header nav ul li {
-  flex-grow: 1;
+nav li {
+  margin-right: 2vw;
 }
-
-.bailes{
-  background-color: rgb(255, 184, 0);
-  height: 40px;
-  border-radius: 125px;
-}
-
-header nav ul li a {
-  color:black;
-  text-decoration: none;
-  display: block;
-  text-align: center;
-  font-style: italic;
-  padding: 10px;
-}
-
-header nav ul li a:hover{
-  color: rgba(0, 0, 0, 0.4);
-}
-main{
-  margin: 0 10%;
-}
-
-/*SECCION 1*/
-.clase1{
-  width: 100%;
-}
-
-.section-1 h2{
-  text-align: center; 
-  /*font-family: ;*/
-  font-size: 60px;
-  
-}
-
-.parrafo1{
-  margin: 100px 0;
-}
-
-.parra1{
-  text-indent: 30px;
+.botonBailes {
+  background-color: #ffb800;
+  border-radius: 1vw;
+  padding: 0.3vw;
+  width: 8vw;
   justify-content: center;
-  line-height: 1.5;
-  /*font-family: ;*/
-  font-size: 50px;
-  
+  color: black;
+  text-decoration: none;
+}
+nav a {
+  display: flex;
+  text-decoration: none;
+  color: black;
+  font-size: 1.2vw;
 }
 
-.clase1 img{
-  width: 35%;
-  border-radius: 25px;
+
+/*Container*/
+.container {
+  position: relative;
+  justify-content: center;
 }
+
+.clase1{
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
+  justify-content: center;
+  position: relative;
+  top: 10%;
+  left:40%;
+  text-indent: -3vw;
+  text-shadow: 3px 3px 4px rgba(255, 255, 255, 1);
+  font-size: 4vw;
+}
+
+.parrafo1 p{
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
+  justify-content: center;
+  position: relative;
+  top: 10%;
+  left:20%;
+  text-indent: -3vw;
+  text-shadow: 3px 3px 4px rgba(255, 255, 255, 1);
+  font-size: 6vw;
+  color:rgb(7, 1, 1);
+}
+
+.imagenAranceles {
+  position: relative;
+  width: 40vw;
+  top: 30%;
+  left: 30%;
+  border-radius: 10%;
+  box-shadow: 0.3vw 0.3vw 0.4vw #070606;
+
+}
+
+.promos h2{
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
+  justify-content: center;
+  position: relative;
+  top: 10%;
+  left:40%;
+  text-indent: -3vw;
+  text-shadow: 3px 3px 4px rgba(255, 255, 255, 1);
+  font-size: 4vw;
+}
+.promos h3{
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
+  justify-content: center;
+  position: relative;
+  top: 10%;
+  left:40%;
+  text-indent: -3vw;
+  text-shadow: 3px 3px 4px rgba(255, 255, 255, 1);
+  font-size: 4vw;
+}
+
+.promos p{
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
+  justify-content: center;
+  position: relative;
+  top: 10%;
+  left:20%;
+  text-indent: -3vw;
+  text-shadow: 3px 3px 4px rgba(255, 255, 255, 1);
+  font-size: 3vw;
+  color:rgb(7, 1, 1);
+}
+
 
 /*FOOTER*/
 .footer{
@@ -176,3 +199,32 @@ main{
   color: #358de6;
   background-color: #ffffff;
 }
+
+/* MEDIA QUERY */
+
+@media only screen and (max-width:950px){
+  header {
+    padding: 8% 0 0 0;
+  }
+.logo{
+    width:30%;
+}
+
+.footer{
+  padding:4% 0;
+}
+.footer h3{
+  color: #ffffff;
+  font-size: 3.5vw;
+}
+.footer p{
+  color: #ffffff;
+  font-size: 2.5vw;
+}
+.fa-brands{
+  font-size: 4vw; 
+  margin: 2vw;
+  width: 6vw;
+  height: 6vw;
+}
+} 
