--- a/css/index.css
+++ b/css/index.css
@@ -1,35 +1,31 @@
 * {
   padding: 0;
   margin: 0;
-}
-html{
   box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
+
 a:hover{
   text-decoration: underline;
 }
 body {
   background-color: rgb(0, 214, 214);
 }
-header {
-  padding: 4% 0 0 0;
+header{
+  margin-top:-35px;
 }
-.logo {
-  width: 14%;
-  position: absolute;
-  top: 0.5vw;
+hr{
+  margin-top:-15px;
 }
-nav ul {
-  display: flex;
-  list-style: none;
-  flex-wrap: wrap;
-  margin: 0;
-  padding: 0;
-  justify-content: end;
-  align-items: center;
+.nav-link{
+  text-align: right;
 }
-nav li {
-  margin-right: 2vw;
+.nav-link:hover{
+  font-size: 1.3rem;
+}
+.boton{
+  background-color: #ffb800 !important;
 }
 .botonBailes {
   background-color: #ffb800;
@@ -40,12 +36,7 @@ nav li {
   color: black;
   text-decoration: none;
 }
-nav a {
-  display: flex;
-  text-decoration: none;
-  color: black;
-  font-size: 1.2vw;
-}
+
 .container {
   display: flex;
   position: relative;
