--- a/css/nosotrxs.css
+++ b/css/nosotrxs.css
@@ -1,113 +1,92 @@
-body {
-  background-color: rgba(32, 192, 192, 0.877);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
 }
 
-/*HEADER*/
-header{
-  display: flex;
-  height: 96px;
-  border-bottom:  1px solid rgba(128, 128, 128, 0.63); 
+:root {
+  --color-background: rgb(0, 214, 214);
+  --color-boton: #ffb800;
+  --color-background-form: rgba(0, 214, 214, 0.8);
+  --color-submit: rgba(53, 117, 255);
+  --color-submit-hover: rgba(53, 117, 255, 0.8);
+  --color-background-footer: #000000;
+  --color-text: rgba(255, 255, 255, 1);
+  --color-box-shadow: rgba(135, 135, 135, 0.2);
+  --color-facebook: #1E4595;
+  --color-twitter-1: #42a9ec;
+  --color-twitter-2: #358de6;
 }
 
-header img{
-  width: 170px;
-  height: 118px;
-  margin: 10px 0;
+body {
+  background-color: var(--color-background);
 }
 
-/*NAV*/
-header nav{
+/* HEADER */
+.nav-link {
+  text-align: right;
+}
+
+.nav-link:hover {
+  font-size: 1.3rem;
+}
+
+.boton {
+  background-color: var(--color-boton);
+}
+
+hr {
+  margin-top: -15px;
+}
+
+main {
   width: 100%;
-  margin: 37px 25px 0;
-  display: flex;
-  justify-content: end;
+  padding: 30px 6vw;
 }
 
-header nav ul {
-  list-style: none;
-  display: flex;
+/* SECCION 1 */
+.section-1 {
+  width: 100%;
 }
 
-header nav ul li {
-  flex-grow: 1;
-  font-weight: bold;
-}
-
-.bailes{
-  background-color: rgb(255, 184, 0);
-  height: 40px;
-  border-radius: 125px;
-}
-
-header nav ul li a {
-  color:black;
-  text-decoration: none;
-  display: block;
+.section-1 h2 {
   text-align: center;
-  font-style: italic;
-  padding: 10px;
-}
-
-header nav ul li a:hover{
-  color: rgba(0, 0, 0, 0.4);
-}
-main{
-  margin: 0 10%;
-}
-
-
-/*SECCION 1*/
-.section-1{
-  width: 100%;
-}
-
-.section-1 h2{
-  text-align: center; 
-  /*font-family: ;*/
+  font-weight: bold;
   font-size: 60px;
-  
+  text-shadow: 3px 3px 4px var(--color-text);
 }
 
-.parrafos{
-  margin: 100px 0;
+.parrafos {
+  margin: 30px 3vw;
 }
 
-.parf{
+.parf {
   text-indent: 30px;
-  justify-content: center;
   line-height: 1.5;
-  /*font-family: ;*/
   font-size: 20px;
-  
 }
 
-.section-1 img{
+.section-1 img {
   width: 100%;
   border-radius: 25px;
 }
 
-/*SECTION 2*/
-.section-2{
+/* SECTION 2 */
+.section-2 {
   position: relative;
-  margin: 100px 0;
+  margin: 30px 0;
+  width: 100%;
 }
 
-.map{
-  width: 100%;
-  height: 100vh;
-}
-
-.map iframe{
-  width: 100%;
+.section-2 iframe {
+  width: 90vw;
   height: 100vh;
   border-radius: 15px;
 }
 
-.form-container{
-  background-color: rgba(32, 192, 192, 0.8);
+.form-container {
+  background-color: var(--color-background-form);
   width: 50%;
   position: absolute;
   left: 50%;
@@ -117,39 +96,41 @@ main{
   border-top-right-radius: 15px;
 }
 
-.title-form{
+.title-form {
   margin: 40px 0;
   font-size: 28px;
   text-align: center;
   color: rgb(53, 117, 255);
 }
 
-.form{
+.form {
   display: grid;
   grid-template-columns: 50% 50%;
   padding: 10px;
 }
 
-.box{
-  margin: 10px 10px;  
-  box-shadow: 1px 1px 1px 1px rgba(135,135,135,0.2);
+.box {
+  margin: 10px 10px;
+  box-shadow: 1px 1px 1px 1px var(--color-box-shadow);
 }
 
-.item1, .item3{
+.item1,
+.item3 {
   height: 60px;
   border: 0px;
   outline: none;
   border-radius: 5px;
 }
 
-.item2, .item4{
+.item2,
+.item4 {
   height: 60px;
   border: 0px;
   outline: none;
   border-radius: 5px;
 }
 
-.item5{
+.item5 {
   grid-column: 1/3;
   height: 60px;
   border: 0px;
@@ -157,7 +138,7 @@ main{
   border-radius: 5px;
 }
 
-.item6{
+.item6 {
   grid-column: 1/3;
   height: 60px;
   border: 0px;
@@ -167,10 +148,10 @@ main{
   margin-bottom: 20px;
 }
 
-.submit{
-  background-color: rgb(53, 117, 255);
+.submit {
+  background-color: var(--color-submit);
   font-size: 20px;
-  color: #ffffff;
+  color: var(--color-text);
   grid-column: 1/3;
   width: 25%;
   height: 60px;
@@ -180,76 +161,78 @@ main{
   margin: 10px auto;
 }
 
-.submit:hover{
-  background-color: rgba(53, 117, 255, 0.9);
-  box-shadow: 2px 2px  rgba(53, 117, 255, 0.6) ;
+.submit:hover {
+  background-color: var(--color-submit-hover);
+  box-shadow: 1px 1px 1px 1px var(--color-box-shadow);
 }
 
-/*FOOTER*/
-.footer{
-  background: black;
-  width: 100%;
-  height: 200px;
+/* FOOTER */
+.footer {
+  background: var(--color-background-footer);
   text-align: center;
-  
+  padding: 10px 0;
+  height: 100px;
 }
 
-.footer h3{
-  color: #ffffff;
-  padding-top: 30px
+.footer h3 {
+  color: var(--color-text);
+  font-size: 15px;
 }
 
-.footer p{
-  color: #ffffff;
-  font-size: 13px;
+.footer p {
+  background: var(--color-background-footer);
+  padding-top: 5px;
+  color: var(--color-text);
+  font-size: 10px;
 }
 
-.footer a{
+.footer a {
   text-decoration: none;
 }
 
-.icon-footer{
+.icon-footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: -5px;
 }
 
-.fa-brands{
-  font-size: 35px; 
-  margin: 10px;
-  background: #d1caca;
-  width: 50px;
-  height: 50px;
+.fa-brands {
+  font-size: 29px;
+  margin: 10px 1vw;
+  background: var(--color-text);
+  width: 40px;
+  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 100%;
 }
 
-.fa-instagram{
+.fa-instagram {
   background: linear-gradient(to top right, #fcde30, #e9712a, #d2313b, #ae4198, #7540a1, #5443a8);
-  color: #ffffff;
+  color: var(--color-text);
 }
 
-.fa-instagram:hover{
-  color: black;
+.fa-instagram:hover {
+  color: var(--color-background-footer);
 }
 
-.fa-facebook{
-  color: #1E4595;
+.fa-facebook {
+  color: var(--color-facebook);
 }
 
-.fa-facebook:hover{
-  background: #1E4595;
-  color: #ffffff;
+.fa-facebook:hover {
+  background: var(--color-facebook);
+  color: var(--color-text);
 }
 
-.fa-twitter:hover{
-  background: linear-gradient(to right top, #42a9ec, #358de6);
-  color: #ffffff;
+.fa-twitter:hover {
+  background: linear-gradient(to right top, var(--color-twitter-1), var(--color-twitter-2));
+  color: var(--color-text);
 }
 
-.fa-twitter{
-  color: #358de6;
-  background-color: #ffffff;
+.fa-twitter {
+  color: var(--color-twitter-2);
+  background-color: var(--color-text);
 }
