--- a/css/nosotrxs.css
+++ b/css/nosotrxs.css
@@ -34,6 +34,8 @@ body {
 
 .boton {
   background-color: var(--color-boton);
+  padding:.3rem 1.5rem !important;
+  border-radius: 1vw !important;
 }
 
 hr {
